--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "My Tabbed Notepad",
-  "version": "1.0",
-  "description": "A lightweight and effective notepad with tabs.",
+  "version": "1.1.0",
+  "description": "A lightweight and efficient notepad with tabs for seamless note-taking.",
   "permissions": [
     "storage"
   ],
@@ -13,6 +13,7 @@
       "48": "icon48.png"
     }
   },
+  "homepage_url": "https://github.com/kaushikthakur97/MyNotepadExtension.git",
   "icons": {
     "16": "icon16.png",
     "48": "icon48.png"
