feat: Set Glassmorphism default and enhance UI/UX
This commit introduces a set of fixes and enhancements to improve the first-time user experience and overall application polish.

- **Set Glassmorphism as Default:** Implemented a one-time theme migration in `script.js` that automatically switches users from the old "light" theme to the new "Glassmorphism" default, without overriding other user-selected themes.
- **Improve UI Clarity:** Refined the Glassmorphism theme in `style.css` with darker, more defined borders for better visual separation between UI components.
- **Fix Note Deletion Logic:** Confirmed and finalized the logic that ensures deleting a note correctly selects the next adjacent note in the list, rather than jumping to a pinned note.
- **Docs: Updated README.md** to reflect the latest features and functionality, including the new screenshot and theming capabilities.

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,12 @@
 {
   "manifest_version": 3,
   "name": "My Tabbed Notepad",
-  "version": "1.2.0",
-  "description": "A lightweight and efficient notepad with tabs for seamless note-taking.",
+  "version": "1.3.0",
+  "description": "A lightweight and efficient notepad with tabs, now with screenshot capture.",
   "permissions": [
-    "storage"
+    "storage",
+    "activeTab",
+    "scripting"
   ],
   "action": {
     "default_popup": "popup.html",
